Last Update to html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,8 +4,16 @@
             <title>Ander Fernández</title>
     </head>
     <body>
-        <p>My first portfolio</p>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at itaque incidunt quos dolorem laborum adipisci, ducimus distinctio corporis sed accusamus, dicta quia ipsa quis asperiores expedita commodi, fugit veritatis.
-        </P>
+        <!--Initial block-->
+        <div>
+            <h2>Ander Fernández</h2>
+            <h3>Programmer</h3>
+            <h3>Climber</h3>
+        </div>
+        <!--End of Initial Block-->
+        <div>
+            <h2>About me</h2>
+            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at itaque incidunt quos dolorem laborum adipisci, ducimus distinctio corporis sed accusamus, dicta quia ipsa quis asperiores expedita commodi, fugit veritatis.</P>
+        </div>
     </body>
 </html>
