--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -13,6 +13,7 @@
         <!--End of Initial Block-->
         <div>
             <h2>About me</h2>
+            <p>Soy <strong>Ander Fernández</strong> ta mutil azkarra naz.</p>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at itaque incidunt quos dolorem laborum adipisci, ducimus distinctio corporis sed accusamus, dicta quia ipsa quis asperiores expedita commodi, fugit veritatis.</P>
         </div>
     </body>
