--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -13,7 +13,7 @@
         <!--End of Initial Block-->
         <div>
             <h2>About me</h2>
-            <img src="./images/RowRobot.jpeg" alt="Row Robot Image" height="250">
+            <img src="./images/ResizeRowRobot.png" alt="Row Robot Image" height="250px">
             <p>Soy <strong>Ander Fernández</strong> ta mutil azkarra naz.</p>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at itaque incidunt quos dolorem laborum adipisci, ducimus distinctio corporis sed accusamus, dicta quia ipsa quis asperiores expedita commodi, fugit veritatis.</P>
         </div>
