--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         	<meta charset="utf-8">
             <title>Ander Fernández</title>
@@ -13,7 +14,7 @@
         <!--End of Initial Block-->
         <div>
             <h2>About me</h2>
-            <img src="./images/ResizeRowRobot.png" alt="Row Robot Image" height="250px">
+            <img src="./images/ResizeRowRobot.png" alt="Row Robot Image" height="250">
             <p>Soy <strong>Ander Fernández</strong> ta mutil azkarra naz.</p>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at itaque incidunt quos dolorem laborum adipisci, ducimus distinctio corporis sed accusamus, dicta quia ipsa quis asperiores expedita commodi, fugit veritatis.</P>
         </div>
@@ -57,7 +58,7 @@
         <div>
             <h2></h2>
             <h3></h3>
-            <hp></hp>
+            <p></p>
         </div>
         <!--(div>(h2+h3+(p>span)))*3-->
         <div>
