Add H3 and Hastag style + Experience and skill block

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <!--Initial block-->
         <div>
             <h2>Ander Fernández</h2>
-            <h3>Programmer</h3>
-            <h3>Climber</h3>
+            <h3 class="hastag">#Programmer</h3>
+            <h3 class="hastag">#Musician</h3>
         </div>
         <!--End of Initial Block-->
         <div>
@@ -46,6 +46,11 @@
             </table>
         </div>
         <!--End ofPortfolio block-->
-        <!--table>tr>td*4-->
+        <!--Experience and skill-->
+        <div>
+            <h2>Experience and skill</h2>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo asperiores repellendus adipisci ipsa aperiam provident veritatis voluptatum quo delectus itaque, enim quae ducimus excepturi molestias officiis magni officia ut neque?</p>
+        </div>
     </body>
 </html>
