Id and styles added

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     </head>
     <body>
         <!--Initial block-->
-        <div>
+        <div id="initial">
             <h2>Ander Fernández</h2>
             <h3 class="hastag">#Programmer</h3>
             <h3 class="hastag">#Musician</h3>
         </div>
         <!--End of Initial Block-->
-        <div>
+        <div id="about me">
             <h2>About me</h2>
             <img src="./images/ResizeRowRobot.png" alt="Row Robot Image" height="250">
             <p>Soy <strong>Ander Fernández</strong> ta mutil azkarra naz.</p>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at itaque incidunt quos dolorem laborum adipisci, ducimus distinctio corporis sed accusamus, dicta quia ipsa quis asperiores expedita commodi, fugit veritatis.</P>
         </div>
         <!--Portfolio block-->
-        <div>
+        <div id="portfolio">
             <h2>Portfolio</h2>
             <h3>Looking beyond the text</h3>
             <table>
@@ -45,12 +45,13 @@
                 </tbody>
             </table>
         </div>
-        <!--End ofPortfolio block-->
-        <!--Experience and skill-->
-        <div>
+        <!--End of Portfolio block-->
+        <!--Experience and skill block-->
+        <div id="experience">
             <h2>Experience and skill</h2>
             <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo asperiores repellendus adipisci ipsa aperiam provident veritatis voluptatum quo delectus itaque, enim quae ducimus excepturi molestias officiis magni officia ut neque?</p>
         </div>
+        <!--End of Experience and skill block-->
     </body>
 </html>
