--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         	<meta charset="utf-8">
             <title>Ander Fernández</title>
+            <script src="https://kit.fontawesome.com/84fc5e076c.js" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="./css/style.css">   
     </head>
     <body>
@@ -11,6 +12,9 @@
             <h2>Ander Fernández</h2>
             <h3 class="hastag">#Programmer</h3>
             <h3 class="hastag">#Musician</h3>
+            <div>
+                <i class="fa-brands fa-spotify"></i>
+            </div>
         </div>
         <!--End of Initial Block-->
         <div id="about me" class="section">
