Add social media

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
             <h2>Ander Fernández</h2>
             <h3 class="hastag">#Programmer</h3>
             <h3 class="hastag">#Musician</h3>
-            <div>
-                <i class="fa-brands fa-spotify"></i>
-            </div>
+            <ul id="SocialMedia">
+                <li class="horizontalli"><a href="https://github.com/anderrow" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                <li class="horizontalli"><a href="https://linkedin.com/anderrow" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="horizontalli"><a href="https://instagram.com/ander_row" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li class="horizontalli"><a href="https://x.com/anderrow" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+            </ul>
         </div>
         <!--End of Initial Block-->
         <div id="about me" class="section">
