--- a/index.html
+++ b/index.html
@@ -7,59 +7,77 @@
             <link rel="stylesheet" href="./css/style.css">   
     </head>
     <body>
-        <!--Initial block-->
-        <div id="initial" class="section">
-            <h2>Ander Fernández</h2>
-            <h3 class="hastag">#Programmer</h3>
-            <h3 class="hastag">#Musician</h3>
-            <ul id="SocialMedia">
-                <li class="horizontalli"><a href="https://github.com/anderrow" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-                <li class="horizontalli"><a href="https://linkedin.com/anderrow" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li class="horizontalli"><a href="https://instagram.com/ander_row" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                <li class="horizontalli"><a href="https://x.com/anderrow" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+        <!--Navegation menu-->
+        <nav>
+            <ul>
+                <li>About me</li>
+                <li>Portfolio</li>
+                <li id="logo"><img src="./images/Logo.png" alt="White cat"></i></li>
+                <li>Experience</li>
+                <li>Contact</li>
             </ul>
-        </div>
-        <!--End of Initial Block-->
-        <div id="about me" class="section">
-            <h2>About me</h2>
-            <img src="./images/ResizeRowRobot.png" alt="Row Robot Image" height="250">
-            <p>Soy <strong>Ander Fernández</strong> ta mutil azkarra naz.</p>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at itaque incidunt quos dolorem laborum adipisci, ducimus distinctio corporis sed accusamus, dicta quia ipsa quis asperiores expedita commodi, fugit veritatis.</P>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <!--Portfolio block-->
-        <div id="portfolio" class="section">
-            <h2>Portfolio</h2>
-            <h3>Looking beyond the text</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th colspan="4">Examples of Portfolio</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Music</td>
-                        <td>Production</td>
-                        <td>Web</td>
-                        <td>Desing</td>
-                     </tr>
-                     <tr>
-                        <td>Concerts</td>
-                        <td>BSOs</td>
-                        <td>App</td>
-                        <td>Poster</td>
-                     </tr>
-                </tbody>
-            </table>
-        </div>
-        <!--End of Portfolio block-->
-        <!--Experience and skill block-->
-        <div id="experience" class="section">
-            <h2>Experience and skill</h2>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo asperiores repellendus adipisci ipsa aperiam provident veritatis voluptatum quo delectus itaque, enim quae ducimus excepturi molestias officiis magni officia ut neque?</p>
-        </div>
-        <!--End of Experience and skill block-->
+        </nav>
+         <!--End of navegation menu-->
+         <article>
+            <!--Initial block-->
+            <section id="initial">
+                <h2>Ander Fernández</h2>
+                <h3 class="hastag">Programmer</h3>
+                <h3 class="hastag">Python</h3>
+                <ul id="SocialMedia">
+                    <li class="horizontalli"><a href="https://github.com/anderrow" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                    <li class="horizontalli"><a href="www.linkedin.com/in/ander-fernández2000" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="horizontalli"><a href="https://instagram.com/ander_row" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li class="horizontalli"><a href="https://x.com/anderrow" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+                </ul>
+            </section>
+            <!--End of Initial Block-->
+            <section id="about me" class="section">
+                <h2>About me</h2>
+                <img src="./images/ResizeRowRobot.png" alt="Row Robot Image" height="250">
+                <p>Soy <strong>Ander Fernández</strong> ta mutil azkarra naz.</p>
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at itaque incidunt quos dolorem laborum adipisci, ducimus distinctio corporis sed accusamus, dicta quia ipsa quis asperiores expedita commodi, fugit veritatis.</P>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </section>
+            <!--Portfolio block-->
+            <section id="portfolio" class="section">
+                <h2>Portfolio</h2>
+                <h3>Looking beyond the text</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="4">Examples of Portfolio</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Music</td>
+                            <td>Production</td>
+                            <td>Web</td>
+                            <td>Desing</td>
+                        </tr>
+                        <tr>
+                            <td>Concerts</td>
+                            <td>BSOs</td>
+                            <td>App</td>
+                            <td>Poster</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <!--End of Portfolio block-->
+            <!--Experience and skill block-->
+            <section id="experience" class="section">
+                <h2>Experience and skill</h2>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo asperiores repellendus adipisci ipsa aperiam provident veritatis voluptatum quo delectus itaque, enim quae ducimus excepturi molestias officiis magni officia ut neque?</p>
+            </section>
+            <!--End of Experience and skill block-->
+        </article>
+        <!--Footer block-->
+        <footer>
+
+        </footer>
+         <!--End of footer block-->
     </body>
 </html>
