--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <!--Navegation menu-->
         <nav>
             <ul>
-                <li>About me</li>
-                <li>Portfolio</li>
+                <li><a href="#about me">About me</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li id="logo"><img src="./images/Logo.png" alt="White cat"></i></li>
-                <li>Experience</li>
+                <li><a href="#experience">Experience</a></li>
                 <li>Contact</li>
             </ul>
         </nav>
