--- a/index.html
+++ b/index.html
@@ -43,27 +43,56 @@
             <section id="portfolio" class="section">
                 <h2>Portfolio</h2>
                 <h3>Looking beyond the text</h3>
-                <table>
-                    <thead>
-                        <tr>
-                            <th colspan="4">Examples of Portfolio</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Music</td>
-                            <td>Production</td>
-                            <td>Web</td>
-                            <td>Desing</td>
-                        </tr>
-                        <tr>
-                            <td>Concerts</td>
-                            <td>BSOs</td>
-                            <td>App</td>
-                            <td>Poster</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="portfolioRow">
+                    <div class="card">
+                        <img src="./images/SmallEvilCat.png" alt="small evil cat">
+                        <h3>concept</h3>
+                        <h4>concept Row</h4>
+                        <div class="sep"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <div class="moreinfo"><button type="button">More info</button></div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/SmallEvilCat.png" alt="small evil cat">
+                        <h3>concept</h3>
+                        <h4>concept Row</h4>
+                        <div class="sep"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <div class="moreinfo"><button type="button">More info</button></div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/SmallEvilCat.png" alt="small evil cat">
+                        <h3>concept</h3>
+                        <h4>concept Row</h4>
+                        <div class="sep"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <div class="moreinfo"><button type="button">More info</button></div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/SmallEvilCat.png" alt="small evil cat">
+                        <h3>concept</h3>
+                        <h4>concept Row</h4>
+                        <div class="sep"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <div class="moreinfo"><button type="button">More info</button></div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/SmallEvilCat.png" alt="small evil cat">
+                        <h3>concept</h3>
+                        <h4>concept Row</h4>
+                        <div class="sep"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <div class="moreinfo"><button type="button">More info</button></div>
+                     </div>
+                    <div class="card">
+                        <div class="card">
+                        <img src="./images/SmallEvilCat.png" alt="small evil cat">
+                        <h3>concept</h3>
+                        <h4>concept Row</h4>
+                        <div class="sep"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <div class="moreinfo"><button type="button">More info</button></div>
+                    </div>
             </section>
             <!--End of Portfolio block-->
             <!--Experience and skill block-->
