--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
                 </ul>
             </section>
             <!--End of Initial Block-->
-            <section id="about me" class="section">
-                <h2>About me</h2>
-                <img src="./images/ResizeRowRobot.png" alt="Row Robot Image" height="250">
-                <p>Soy <strong>Ander Fernández</strong> ta mutil azkarra naz.</p>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at itaque incidunt quos dolorem laborum adipisci, ducimus distinctio corporis sed accusamus, dicta quia ipsa quis asperiores expedita commodi, fugit veritatis.</P>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <section id="aboutme" class="section">
+                <div id="imgaboutme"><img src="./images/ResizeRowRobot.png" alt="Row Robot Image" height="250"></div>
+                <div id="contectaboutme"><h2>About me</h2>
+                    <p>I'm a <strong>robot cat</strong> with big ears.</p>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at itaque incidunt quos dolorem laborum adipisci, ducimus distinctio corporis sed accusamus, dicta quia ipsa quis asperiores expedita commodi, fugit veritatis.</P>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <div class="moreinfo"><button type="button">More info</button></div>
+                </div>
             </section>
             <!--Portfolio block-->
             <section id="portfolio" class="section">
