Update buttons style

--- a/index.html
+++ b/index.html
@@ -48,40 +48,40 @@
                 <div class="portfolioRow">
                     <div class="card">
                         <img src="./images/SmallEvilCat.png" alt="small evil cat">
-                        <h3>concept</h3>
-                        <h4>concept Row</h4>
+                        <h3>Concept</h3>
+                        <h4>Row concept</h4>
                         <div class="sep"></div>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                         <div class="moreinfo"><button type="button">More info</button></div>
                     </div>
                     <div class="card">
                         <img src="./images/SmallEvilCat.png" alt="small evil cat">
-                        <h3>concept</h3>
-                        <h4>concept Row</h4>
+                        <h3>Concept</h3>
+                        <h4>Row concept</h4>
                         <div class="sep"></div>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                         <div class="moreinfo"><button type="button">More info</button></div>
                     </div>
                     <div class="card">
                         <img src="./images/SmallEvilCat.png" alt="small evil cat">
-                        <h3>concept</h3>
-                        <h4>concept Row</h4>
+                        <h3>Concept</h3>
+                        <h4>Row concept</h4>
                         <div class="sep"></div>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                         <div class="moreinfo"><button type="button">More info</button></div>
                     </div>
                     <div class="card">
                         <img src="./images/SmallEvilCat.png" alt="small evil cat">
-                        <h3>concept</h3>
-                        <h4>concept Row</h4>
+                        <h3>Concept</h3>
+                        <h4>Row concept</h4>
                         <div class="sep"></div>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                         <div class="moreinfo"><button type="button">More info</button></div>
                     </div>
                     <div class="card">
                         <img src="./images/SmallEvilCat.png" alt="small evil cat">
-                        <h3>concept</h3>
-                        <h4>concept Row</h4>
+                        <h3>Concept</h3>
+                        <h4>Row concept</h4>
                         <div class="sep"></div>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                         <div class="moreinfo"><button type="button">More info</button></div>
@@ -89,8 +89,8 @@
                     <div class="card">
                         <div class="card">
                         <img src="./images/SmallEvilCat.png" alt="small evil cat">
-                        <h3>concept</h3>
-                        <h4>concept Row</h4>
+                        <h3>Concept</h3>
+                        <h4>Row concept</h4>
                         <div class="sep"></div>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
                         <div class="moreinfo"><button type="button">More info</button></div>
