--- a/index.html
+++ b/index.html
@@ -100,8 +100,68 @@
             <!--Experience and skill block-->
             <section id="experience" class="section">
                 <h2>Experience and skill</h2>
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo asperiores repellendus adipisci ipsa aperiam provident veritatis voluptatum quo delectus itaque, enim quae ducimus excepturi molestias officiis magni officia ut neque?</p>
+                <div class="gridexp">
+                    <div class="cardexp">
+                        <h3>Web design</h3>
+                        <h4 class="lefttext">2020-2022</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <ul>
+                            <li><img src="./images/CDH22.png" alt="cat1"></li>
+                            <li><img src="./images/FRI02.png" alt="cat2"></li>
+                            <li><img src="./images/LIC18.png" alt="cat3"></li>
+                        </ul>
+                    </div>
+                    <div class="cardexp">
+                        <h3>Web design</h3>
+                        <h4 class="lefttext">2020-2022</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <ul>
+                            <li><img src="./images/CDH22.png" alt="cat1"></li>
+                            <li><img src="./images/FRI02.png" alt="cat2"></li>
+                            <li><img src="./images/LIC18.png" alt="cat3"></li>
+                        </ul>
+                    </div>
+                    <div class="cardexp">
+                        <h3>Web design</h3>
+                        <h4 class="lefttext">2020-2022</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <ul>
+                            <li><img src="./images/CDH22.png" alt="cat1"></li>
+                            <li><img src="./images/FRI02.png" alt="cat2"></li>
+                            <li><img src="./images/LIC18.png" alt="cat3"></li>
+                        </ul>
+                    </div>
+                    <div class="cardexp">
+                        <h3>Web design</h3>
+                        <h4 class="lefttext">2020-2022</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <ul>
+                            <li><img src="./images/CDH22.png" alt="cat1"></li>
+                            <li><img src="./images/FRI02.png" alt="cat2"></li>
+                            <li><img src="./images/LIC18.png" alt="cat3"></li>
+                        </ul>
+                    </div>
+                    <div class="cardexp">
+                        <h3>Web design</h3>
+                        <h4 class="lefttext">2020-2022</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <ul>
+                            <li><img src="./images/CDH22.png" alt="cat1"></li>
+                            <li><img src="./images/FRI02.png" alt="cat2"></li>
+                            <li><img src="./images/LIC18.png" alt="cat3"></li>
+                        </ul>
+                    </div>
+                    <div class="cardexp">
+                        <h3>Web design</h3>
+                        <h4 class="lefttext">2020-2022</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <ul>
+                            <li><img src="./images/CDH22.png" alt="cat1"></li>
+                            <li><img src="./images/FRI02.png" alt="cat2"></li>
+                            <li><img src="./images/LIC18.png" alt="cat3"></li>
+                        </ul>
+                    </div>
+                </div>
             </section>
             <!--End of Experience and skill block-->
         </article>
