--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h3>Looking beyond the text</h3>
                 <div class="portfolioRow">
                     <div class="card">
-                        <img src="./images/SmallEvilCat.png" alt="small evil cat">
+                        <video controls height="100" width="250"><source src="./media/Nyan Cat! [Official].mp4" type="video/mp4"></video>
                         <h3>Concept</h3>
                         <h4>Row concept</h4>
                         <div class="sep"></div>
@@ -55,7 +55,7 @@
                         <div class="moreinfo"><button type="button">More info</button></div>
                     </div>
                     <div class="card">
-                        <img src="./images/SmallEvilCat.png" alt="small evil cat">
+                        <iframe width="250" height="100" src="https://www.youtube.com/embed/IxX_QHay02M?si=Ug92yoMjZ2LziNl9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <h3>Concept</h3>
                         <h4>Row concept</h4>
                         <div class="sep"></div>
