--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         	<meta charset="utf-8">
             <title>Ander Fernández</title>
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="#aboutme">About me</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li id="logo"><a href="#initial">  <img src="./images/Logo.png" alt="White cat"></a> </i></li>
+                <li id="logo"><a href="#initial">  <img src="./images/Logo.png" alt="White cat"></a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -47,7 +47,7 @@
                 <h3>Looking beyond the text</h3>
                 <div class="portfolioRow">
                     <div class="card">
-                        <video controls height="100" width="250"><source src="./media/Nyan Cat! [Official].mp4" type="video/mp4"></video>
+                        <video controls height="100" width="250"><source src="./media/NyanCat.mp4" type="video/mp4"></video>
                         <h3>Concept</h3>
                         <h4>Row concept</h4>
                         <div class="sep"></div>
@@ -55,7 +55,7 @@
                         <div class="moreinfo"><button type="button">More info</button></div>
                     </div>
                     <div class="card">
-                        <iframe width="250" height="100" src="https://www.youtube.com/embed/IxX_QHay02M?si=Ug92yoMjZ2LziNl9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="250" height="100" src="https://www.youtube.com/embed/IxX_QHay02M?si=Ug92yoMjZ2LziNl9" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <h3>Concept</h3>
                         <h4>Row concept</h4>
                         <div class="sep"></div>
@@ -87,7 +87,6 @@
                         <div class="moreinfo"><button type="button">More info</button></div>
                      </div>
                     <div class="card">
-                        <div class="card">
                         <img src="./images/SmallEvilCat.png" alt="small evil cat">
                         <h3>Concept</h3>
                         <h4>Row concept</h4>
@@ -96,6 +95,7 @@
                         <div class="moreinfo">
                             <button type="button">More info</button></div>
                     </div>
+                </div>
             </section>
             <!--End of Portfolio block-->
             <!--Experience and skill block-->
