--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="zxx">
     <head>
         	<meta charset="utf-8">
             <title>Ander Fernández</title>
@@ -168,7 +168,7 @@
             <section id="contact">
                 <h2>Contact</h2>
                 <h3>Ask me whatever you want</h3>
-                <form action="">
+                <form>
                     <div class="itemform">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" minlength="3" maxlength="64" size="32" required>
