--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </nav>
          <!--End of navegation menu-->
          <article>
+            <h2>Title</h2>
             <!--Initial block-->
             <section id="initial">
                 <h2>Ander Fernández</h2>
